# theproject

./: CMakeLists.txt
include/mc/: err.h  mc.h  sds.h  util.h  window.h
include/mc/nbt/: buffer.h  list.h  nbt.h
include/mc/net/: datautils.h  proto.h
src/: err.c  main.c  sds.c  window.c
src/nbt/: buffer.c  nbt_loading.c  nbt_parsing.c  nbt_treeops.c  nbt_util.c
src/net/: datautils.c  proto.c
